# rust

./: .env  .gitignore  Cargo.toml  README.md
migrations/2018-05-23-055609_account/: down.sql  up.sql
migrations/2018-05-23-063119_profile/: down.sql  up.sql
src/: errors.rs  lib.rs  main.rs  model.rs  schema.rs
src/dao/: account_dao.rs  mod.rs  profile_dao.rs
src/domain/: account.rs  mod.rs  profile.rs  schema.rs
