[package]
name = "rust-rest-api"
version = "0.1.0"
authors = ["George Maistrenko <george.maistrenko@mobintegro.com>"]

[dependencies]
rocket = "*"
rocket_contrib = "*"
rocket_codegen = "*"

serde = "*"
serde_derive = "*"
serde_json = "*"

# Database dependencies
diesel = { version = "*", features = ["postgres"] }
diesel_codegen = { version = "*", features = ["postgres"] }
r2d2 = "*"
r2d2-diesel = "*"
lazy_static = "*"
dotenv = "*"