[package]
name = "rust-rest-api"
version = "0.1.0"
authors = ["George Maistrenko <george.maistrenko@mobintegro.com>"]

[dependencies]
# REST web server dependencies
rocket = "*"
rocket_contrib = "*"
rocket_codegen = "*"

# JSON dependencies
serde = "*"
serde_derive = "*"
serde_json = "*"
serde_urlencoded = "*"

# Database dependencies
diesel = { version = "1.3.0", features = ["postgres","r2d2","serde_json","chrono"] }
chrono = "*"
lazy_static = "*"
dotenv = "*"